colors KCM: Port away from deprecated KNS signals & react to adoption

BUG: 417983