kcms/colors/colors.cpp
@@ -117,42 +117,53 @@ bool KCMColors::downloadingFile() const
     return m_tempCopyJob;
 }
 
-void KCMColors::reloadModel(const QQmlListReference &changedEntries)
+void KCMColors::knsEntryChanged(KNSCore::EntryWrapper *entry)
 {
     m_model->load();
 
     // If a new theme was installed, select the first color file in it
-    if (changedEntries.count() > 0) {
-        QStringList installedThemes;
+    QStringList installedThemes;
+    const QString suffix = QStringLiteral(".colors");
+    if (entry->entry().status() == KNS3::Entry::Installed) {
+        for (const QString &path : entry->entry().installedFiles()) {
+            const QString fileName = path.section(QLatin1Char('/'), -1, -1);
 
-        const QString suffix = QStringLiteral(".colors");
-
-        for (int i = 0; i < changedEntries.count(); ++i) {
-            KNSCore::EntryWrapper *entry = qobject_cast<KNSCore::EntryWrapper *>(changedEntries.at(i));
-            if (entry && entry->entry().status() == KNS3::Entry::Installed) {
-                for (const QString &path : entry->entry().installedFiles()) {
-                    const QString fileName = path.section(QLatin1Char('/'), -1, -1);
-
-                    const int suffixPos = fileName.indexOf(suffix);
-                    if (suffixPos != fileName.length() - suffix.length()) {
-                        continue;
-                    }
-
-                    installedThemes.append(fileName.left(suffixPos));
-                }
-
-                if (!installedThemes.isEmpty()) {
-                    // The list is sorted by (potentially translated) name
-                    // but that would require us parse every file, so this should be close enough
-                    std::sort(installedThemes.begin(), installedThemes.end());
-
-                    m_model->setSelectedScheme(installedThemes.constFirst());
-                }
-                // Only do this for the first newly installed theme we find
-                break;
+            const int suffixPos = fileName.indexOf(suffix);
+            if (suffixPos != fileName.length() - suffix.length()) {
+                continue;
             }
+
+            installedThemes.append(fileName.left(suffixPos));
+        }
+
+        if (!installedThemes.isEmpty()) {
+            // The list is sorted by (potentially translated) name
+            // but that would require us parse every file, so this should be close enough
+            std::sort(installedThemes.begin(), installedThemes.end());
+
+            m_model->setSelectedScheme(installedThemes.constFirst());
         }
     }
+}
+
+void KCMColors::loadSelectedColorScheme()
+{
+    colorsSettings()->config()->reparseConfiguration();
+    colorsSettings()->read();
+    const QString schemeName = colorsSettings()->colorScheme();
+
+    // If the scheme named in kdeglobals doesn't exist, show a warning and use default scheme
+    if (m_model->indexOfScheme(schemeName) == -1) {
+        m_model->setSelectedScheme(colorsSettings()->defaultColorSchemeValue());
+        // These are normally synced but initially the model doesn't emit a change to avoid the
+        // Apply button from being enabled without any user interaction. Sync manually here.
+        m_filteredModel->setSelectedScheme(colorsSettings()->defaultColorSchemeValue());
+        emit showSchemeNotInstalledWarning(schemeName);
+    } else {
+        m_model->setSelectedScheme(schemeName);
+        m_filteredModel->setSelectedScheme(schemeName);
+    }
+    setNeedsSave(false);
 }
 
 void KCMColors::installSchemeFromFile(const QUrl &url)
@@ -311,19 +322,7 @@ void KCMColors::load()
     m_config->markAsClean();
     m_config->reparseConfiguration();
 
-    const QString schemeName = colorsSettings()->colorScheme();
-
-    // If the scheme named in kdeglobals doesn't exist, show a warning and use default scheme
-    if (m_model->indexOfScheme(schemeName) == -1) {
-        m_model->setSelectedScheme(colorsSettings()->defaultColorSchemeValue());
-        // These are normally synced but initially the model doesn't emit a change to avoid the
-        // Apply button from being enabled without any user interaction. Sync manually here.
-        m_filteredModel->setSelectedScheme(colorsSettings()->defaultColorSchemeValue());
-        emit showSchemeNotInstalledWarning(schemeName);
-    } else {
-        m_model->setSelectedScheme(schemeName);
-        m_filteredModel->setSelectedScheme(schemeName);
-    }
+    loadSelectedColorScheme();
 
     {
         KConfig cfg(QStringLiteral("kcmdisplayrc"), KConfig::NoGlobals);
